--- a/src/app/Components/BackOffice/dashboard/dashboard-components/sales-summary/sales-summary.component.html
+++ b/src/app/Components/BackOffice/dashboard/dashboard-components/sales-summary/sales-summary.component.html
@@ -3,7 +3,7 @@
         <div class="d-md-flex align-items-center">
             <div>
                 <h4 class="card-title">Monthly Revenue Summary</h4>
-                <h5 class="card-subtitle">Trip Revenue Report for the Year</h5>
+                <h5 class="card-subtitle">Actual Payment Revenue for the Year</h5>
             </div>
         </div>
         <div class="row mt-4">
