--- a/src/app/Shared/profile/profile.component.html
+++ b/src/app/Shared/profile/profile.component.html
@@ -167,16 +167,24 @@
         (click)="deleteParcel(parcel.parcelId)" 
         class="cancel-parcel-btn">
         Cancel Parcel
-      </button>     
+      </button>  
+        <button 
+           *ngIf="parcel.status === 'DELIVERED'"
+           (click)="downloadPdf(parcel.parcelId)" 
+           class="pdf-parcel-btn">
+           PDF
+         </button>   
      <!-- DAMAGED BUTTON visible uniquement si le colis est livré -->
+
      <button 
      *ngIf="parcel.status === 'DELIVERED'" 
      (click)="openDamageModal(parcel)" 
      class="damaged-parcel-btn">
-     Report Damaged
+     Reports
    </button>
         </div>
-          </div>
+ </div>
+ 
       <!-- MODAL POUR SIGNLER UN COLIS ENDOMMAGÉ -->
 <div *ngIf="isDamageModalOpen" class="damage-modal">
   <div class="modal-content">
