--- a/src/app/Components/DriverInterface/schedule/schedule.component.html
+++ b/src/app/Components/DriverInterface/schedule/schedule.component.html
@@ -3,10 +3,10 @@
       <h3>{{ dateGroup.key }}</h3>
       <div *ngFor="let task of dateGroup.value" class="task-card">
         <div *ngIf="task.type === 'parcel'">
-          📦 <strong>Colis</strong> - Statut : {{ task.status }}
+          📦 <strong>Parcel</strong> - Statut : {{ task.status }}
         </div>
         <div *ngIf="task.type === 'trip'">
-          🚌 <strong>Trajet</strong> - Statut : {{ task.reservationStatus }}
+          🚌 <strong>Trip</strong> - Statut : {{ task.reservationStatus }}
         </div>
       </div>
     </div>
